src/test/compile-fail/import-from-path.rs
// error-pattern:expected
import foo::{bar}::baz